style: fixed background size on scrollbar appear

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
   justify-content: center;
   min-height: 100vh;
   background-image: url('./Assets/vinyl_shop.jpg');
-  background-size: cover;
+  background-size: 100vw;
   background-position: left;
   background-attachment: fixed;
 }
